--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Built application files
 *.apk
 *.ap_
@@ -25,3 +27,29 @@ proguard/
 
 # Log Files
 *.log
+
+.classpath
+.project
+.settings
+eclipsebin
+
+bin
+gen
+build
+out
+lib
+
+.idea
+*.iml
+classes
+
+obj
+
+.DS_Store
+
+# Gradle
+.gradle
+jniLibs
+build
+local.properties
+reports
