feat (maven) : modification groupie

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ ext {
 ext.deps = [
         // Android
         android: 'com.google.android:android:4.1.1.4',
+        androidSupportV4: 'com.android.support:support-v4:23.0.1',
         androidCompat: 'com.android.support:appcompat-v7:23.0.1',
 
         // Square
