--- a/gradle.properties
+++ b/gradle.properties
@@ -17,14 +17,14 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP=mslimani
+GROUP=fr.mslimani
 VERSION_NAME=1.0.0
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
 POM_URL=https://github.com/mslimani/smoothy/
 POM_SCM_URL=https://github.com/mslimani/smoothy/
-POM_SCM_CONNECTION=scm:git:git://github.commslimani/smoothy.git
+POM_SCM_CONNECTION=scm:git:git://github.com/mslimani/smoothy.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/mslimani/smoothy.git
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
