--- a/smoothy/src/main/AndroidManifest.xml
+++ b/smoothy/src/main/AndroidManifest.xml
@@ -1,6 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="smoothy">
-
-    <application android:label="@string/app_name" />
-
-</manifest>
+          package="smoothy" />
