--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP=fr.mslimani
+GROUP=com.github.mslimani
 VERSION_NAME=1.0.0
 
 POM_DESCRIPTION=Field and method binding for Android views.
