--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile deps.androidCompat
     compile project(':smoothy')
+    //compile 'com.github.mslimani:smoothy:1.0.0'
+    //apt 'com.github.mslimani:smoothy-compiler:1.0.0'
+    //apt 'com.github.mslimani:smoothy:1.0.0'
     apt project(':smoothy-compiler')
+//    compile project('com.github.mslimani:smoothy:1.0.0')
+  //  apt project('com.github.mslimani:smoothy-compiler:1.0.0')
 }
