--- a/smoothy-compiler/build.gradle
+++ b/smoothy-compiler/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'java'
 
+def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
+def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
+for (File file : sdkHandler.sdkLoader.repositories) {
+    repositories.maven {
+        url = file.toURI()
+    }
+}
+
 dependencies {
     compile project(':smoothy-annotations')
     compile deps.autoservice
