refactor (release) : refactor maven release

--- a/smoothy-annotations/build.gradle
+++ b/smoothy-annotations/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'checkstyle'
 
 def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
 def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
@@ -10,6 +11,11 @@ for (File file : sdkHandler.sdkLoader.repositories) {
 
 targetCompatibility = JavaVersion.VERSION_1_7
 sourceCompatibility = JavaVersion.VERSION_1_7
+
+checkstyle {
+    configFile rootProject.file('checkstyle.xml')
+    showViolations true
+}
 
 configurations {
     provided
