--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,29 @@ subprojects { project ->
     version = VERSION_NAME
 
     repositories {
-        jcenter()
         mavenCentral()
+    }
+
+    apply plugin: 'checkstyle'
+
+    task checkstyle(type: Checkstyle) {
+        configFile rootProject.file('checkstyle.xml')
+        source 'src/main/java'
+        ignoreFailures false
+        showViolations true
+        include '**/*.java'
+
+        classpath = files()
+    }
+
+    afterEvaluate {
+        if (project.tasks.findByName('check')) {
+            check.dependsOn('checkstyle')
+        }
     }
 
     buildscript {
         repositories {
-            jcenter()
             mavenCentral()
         }
         dependencies {
@@ -20,24 +36,6 @@ subprojects { project ->
     }
 }
 
-/*
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
-*/
 
 ext {
     minSdkVersion = 16
