--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
-include ':app'
+include ':smoothy-sample'
 include ':smoothy-annotations'
 include ':smoothy-compiler'
 include ':smoothy'
 
 rootProject.name = 'smoothy-parent'
-//rootProject.name = 'smoothy-parent'
